<?xml version="1.0" encoding="utf-8"?>

<!-- Use this file to edit the toolbar menu items used in BaseActivity -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/popupMenu"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/propertiesTxt"
        app:showAsAction="always" />

    <item
        android:id="@+id/learnMoreButton"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/learnMoreTxt"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/helpButton"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/helpTxt"
        app:showAsAction="ifRoom" />

</menu>