<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/trashBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trashBoxTxt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="202dp" />

    <CheckBox
        android:id="@+id/overgrownBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overgrownBoxTxt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="243dp" />

    <EditText
        android:id="@+id/reportEntry"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="290dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/reportTitle"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/reportDescription"
        android:layout_width="370dp"
        android:layout_height="123dp"
        android:text="@string/reportDescriptionTxt"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="71dp" />

    <Button
        android:id="@+id/reportSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportSubmitTxt"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="503dp" />
</android.support.constraint.ConstraintLayout>